--- a/src/app/pages/dashboard/lista-tarefas/lista-tarefas.component.html
+++ b/src/app/pages/dashboard/lista-tarefas/lista-tarefas.component.html
@@ -1,87 +1,78 @@
 <div class="page">
-    <div class="addContainer">
-  
-      <div class="titulo" id="start"> 
-        <h1>{{tituloPagina}}</h1>
-      </div>          
-  
-      <!-- Caso a lista ainda não esteja iniciada -->
-      <div *ngIf="!visualizarLista" class="inicio">
-        <img src="../../../../assets/images/edit (1).png" alt="listaTarefas">
-        <div class="criar" (click)="ativarLista()"><h2>Criar lista de tarefas</h2></div>
+  <div class="addContainer">
+    <div class="titulo" id="start">
+      <h1>{{ tituloPagina }}</h1>
+    </div>
+
+    <!-- Formulário para adicionar ou editar tarefa -->
+    <form (ngSubmit)="onSubmit()">
+      <h3>Título</h3>
+      <input type="text" [(ngModel)]="titulo" placeholder="Insira o título da tarefa..." name="titulo" required>
+
+      <h3>Descrição</h3>
+      <input type="text" [(ngModel)]="descricao" placeholder="Insira a descrição da tarefa..." name="descricao" required>
+
+      <h3>Nível de dificuldade</h3>
+      <div class="opcoes">
+        <label>
+          <input type="radio" [(ngModel)]="dificuldade" name="dificuldade" value="fácil" /> Fácil
+        </label>
+        <label>
+          <input type="radio" [(ngModel)]="dificuldade" name="dificuldade" value="médio" /> Médio
+        </label>
+        <label>
+          <input type="radio" [(ngModel)]="dificuldade" name="dificuldade" value="difícil" /> Difícil
+        </label>
       </div>
-  
-      <!-- Lista iniciada -->
-      <div *ngIf="visualizarLista">
-        <!-- Formulário com campos: Título, Descrição e Dificuldade para a tarefa -->
-        <form [formGroup]="tarefaForm" (ngSubmit)="onSubmit()">
-          <h3 style="margin-top: 0px;">Título</h3>
-          <input type="text" formControlName="titulo" placeholder="Insira o título da tarefa...">
-          
-          <h3>Descrição</h3>
-          <input type="text" formControlName="descricao" placeholder="Insira a descrição da tarefa...">
-          
-          <h3>Nível de dificuldade</h3>
-          <div class="opcoes">
-            <label class="dificulty-btn">
-              <input type="radio" formControlName="dificuldade" value="fácil"> Fácil
-            </label>
-            <label class="dificulty-btn">
-              <input type="radio" formControlName="dificuldade" value="médio"> Médio
-            </label>
-            <label class="dificulty-btn">
-              <input type="radio" formControlName="dificuldade" value="difícil"> Difícil
-            </label>
-          </div>
-  
-          <button type="submit" [disabled]="!tarefaForm.valid" [ngClass]="{ disabled: !tarefaForm.valid }">
-            {{ tarefaEditada ? 'Atualizar' : 'Adicionar' }}
-          </button>
-        </form>
-  
-        <hr style="margin-top: 20px; margin-bottom: 20px; border-top: 1px solid #ccc;">
-  
-        <div class="listagem">
-          <h2>Tarefas adicionadas ({{tarefas.length}})</h2>
-  
-          <h3>Pendentes</h3>
-          <div *ngFor="let tarefa of tarefas">
-            <div *ngIf="!tarefa.concluida" class="tarefa">
-              <div class="header">
-                <h4>{{ tarefa.titulo }}</h4>
-                <div class="icons">
-                  <span>
-                    <i (click)="concluirTarefa(tarefa.titulo)" class="fa fa-check" aria-hidden="true"></i>
-                    <i (click)="excluirTarefa(tarefa.titulo)" class="fa fa-times" aria-hidden="true"></i>
-                    <i (click)="editarTarefa(tarefa.titulo)" class="fa fa-edit" aria-hidden="true"></i>
-                  </span>
-                </div>
-              </div>
-              <div class="detalhes">
-                <p style="margin-bottom: 5px;">{{ tarefa.descricao }}</p>
-                <p style="text-transform: uppercase;"><strong>{{ tarefa.dificuldade }}</strong></p>
-              </div>
+
+      <button type="submit" [disabled]="!titulo || !descricao">
+        {{ tarefaEditada ? 'Atualizar' : 'Adicionar' }}
+      </button>
+    </form>
+
+    <!-- Listagem de tarefas -->
+    <hr style="margin-top: 20px; margin-bottom: 20px; border-top: 1px solid #ccc;">
+
+    <div class="listagem">
+      <h2>Tarefas adicionadas ({{tarefas.length}})</h2>
+
+      <h3>Pendentes</h3>
+      <div *ngFor="let tarefa of tarefas">
+        <div *ngIf="!tarefa.concluida" class="tarefa">
+          <div class="header">
+            <h4>{{ tarefa.titulo }}</h4>
+            <div class="icons">
+              <span>
+                <i (click)="concluirTarefa(tarefa)" class="fa fa-check" aria-hidden="true"></i>
+                <i (click)="excluirTarefa(tarefa)" class="fa fa-times" aria-hidden="true"></i>
+                <i (click)="editarTarefa(tarefa)" class="fa fa-edit" aria-hidden="true"></i>
+              </span>
             </div>
           </div>
-  
-          <h3>Concluídas</h3>
-          <div *ngFor="let tarefa of tarefas">
-            <div *ngIf="tarefa.concluida" class="tarefa">
-              <div class="header">
-                <h4>{{ tarefa.titulo }}</h4>
-                <div class="icons">
-                  <span><i (click)="excluirTarefa(tarefa.titulo)" class="fa fa-times" aria-hidden="true"></i></span>
-                </div>
-              </div>
-              <div class="detalhes">
-                <p>{{ tarefa.descricao }}</p>
-                <p style="text-transform: uppercase;"><strong>{{ tarefa.dificuldade }}</strong> </p>
-              </div>
-            </div>
+          <div class="detalhes">
+            <p style="margin-bottom: 5px;">{{ tarefa.descricao }}</p>
+            <p style="text-transform: uppercase;"><strong>{{ tarefa.dificuldade }}</strong></p>
           </div>
         </div>
       </div>
-      <button type="button" (click)="logout()">Logout</button>
+
+      <h3>Concluídas</h3>
+      <div *ngFor="let tarefa of tarefas">
+        <div *ngIf="tarefa.concluida" class="tarefa">
+          <div class="header">
+            <h4>{{ tarefa.titulo }}</h4>
+            <div class="icons">
+              <span><i (click)="excluirTarefa(tarefa)" class="fa fa-times" aria-hidden="true"></i></span>
+            </div>
+          </div>
+          <div class="detalhes">
+            <p>{{ tarefa.descricao }}</p>
+            <p style="text-transform: uppercase;"><strong>{{ tarefa.dificuldade }}</strong> </p>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <button type="button" (click)="logout()">Logout</button>
   </div>
-  
+</div>
