--- a/src/app/pages/dashboard/lista-tarefas/lista-tarefas.component.scss
+++ b/src/app/pages/dashboard/lista-tarefas/lista-tarefas.component.scss
@@ -8,6 +8,10 @@
     padding: 50px 0px;
 
     .addContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         background-color: #4C4C47;
         padding: 30px;
         border-radius: 8px;
@@ -15,30 +19,36 @@
         max-width: 800px;
         font-family: Arial, Helvetica, sans-serif;
 
+        button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 20%;
+            background: none;
+            color: #fff;
+            font-size: 18px;
+            font-weight: bold;
+
+            padding: 5px;
+            margin-top: 50px;
+            border-radius: 15px;
+            border: solid 2px red;
+
+            transform: scale(1.07);
+            transition: 0.7s;
+
+            cursor: pointer;
+
+                &:hover {
+                    background-color: red;
+                }
+        }
+
         .titulo {
             text-align: center;
             font-family: 'AlteHaasGroteskBold', sans-serif;
             font-size: 40px;
             color: white;
-        }
-
-        .inicio{
-            text-align: center;
-            margin-bottom: 40px;
-
-            img{
-                width: 150px;
-                margin-bottom: 40px;
-            }
-
-            .criar{
-                background-color: #2D2D2A;
-                width: 40%;
-                margin: 0 auto;
-                padding: 1px;
-                border-radius: 5px;
-                cursor: pointer;
-            }
         }
 
         form {
@@ -59,7 +69,7 @@
                 background-color: #2D2D2A;
                 color: #fff;
 
-                &::placeholder{
+                &::placeholder {
                     font-family: Arial, Helvetica, sans-serif;
                     color: #ffffff91;
                 }
@@ -71,28 +81,20 @@
                 margin-top: 10px;
                 margin-bottom: 60px;
 
-                .dificulty-btn {
+                label {
                     display: inline-block;
                     background-color: #2D2D2A;
                     color: white;
                     padding: 8px;
-                    margin-left: 6%;
-                    margin-right: 6%;
                     border-radius: 5px;
-                    margin-top: 10px;
                     cursor: pointer;
-                    width: 18%;
+                    width: 30%;
                     text-align: center;
                 }
-    
-                .dificulty-btn:hover {
+
+                label:hover {
                     background-color: #2d2d2a93;
                 }
-    
-                .selecionar{
-                    background-color: #ffaa7f;
-                }
-    
             }
 
             button[type="submit"] {
@@ -107,7 +109,7 @@
                 color: #fff;
                 cursor: pointer;
 
-                &:hover{
+                &:hover {
                     background-color: #2d2d2a8c;
                 }
 
@@ -117,25 +119,23 @@
                     cursor: not-allowed;
                 }
             }
-
-            
         }
 
-        .listagem{
+        .listagem {
             width: 85%;
             margin: 0 auto;
 
-            h2{
+            h2 {
                 text-align: center;
                 font-size: 40px;
                 font-family: 'AlteHaasGroteskBold', sans-serif;
             }
 
-            h3{
+            h3 {
                 font-size: 28px;
             }
 
-            .tarefa{
+            .tarefa {
                 border: 1px solid #2D2D2A;
                 padding: 0px 20px;
                 border-radius: 5px;
@@ -143,75 +143,55 @@
                 width: 50%;
                 margin-bottom: 10px;
 
-                .header{
+                .header {
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
                     margin-top: -5px;
 
-                    h4{
+                    h4 {
                         font-size: 22px;
                         font-weight: bold;
                         margin-top: 15px;
                     }
 
-                    .icons{
-                        .fa-check{
+                    .icons {
+                        .fa-check {
                             color: green;
                             margin-right: 10px;
                             cursor: pointer;
 
-                            &:hover{
-                                color:rgb(0, 77, 0);
+                            &:hover {
+                                color: rgb(0, 77, 0);
                             }
                         }
 
-                        .fa-times{
+                        .fa-times {
                             color: red;
                             cursor: pointer;
 
-                            &:hover{
-                                color:rgb(131, 0, 0);
+                            &:hover {
+                                color: rgb(131, 0, 0);
                             }
                         }
 
-                        .fa-edit{
+                        .fa-edit {
                             color: white;
                             cursor: pointer;
                             margin-left: 12px;
 
-                            &:hover{
+                            &:hover {
                                 color: rgb(151, 149, 149);
                             }
                         }
                     }
                 }
 
-                .detalhes{
+                .detalhes {
                     margin-top: 10px;
                     margin-left: 10%;
                 }
             }
         }
-
     }
 }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
